src/objects/zqu__ProductRatePlanChargeTierOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>The code corresponding to the currency for the tier&apos;s price.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EndingUnit__c</fullName>
        <description>The end number of a range of units for the tier.</description>
        <label>Ending Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsOveragePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the price is an overage price, which is the price when usage surpasses the last defined tier.</description>
        <label>Is Overage Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat__c</fullName>
        <description>Indicates if pricing is a flat fee or is per unit. This field is for tiered and volume pricing models only.</description>
        <label>Price Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <description>The price of the tier if the charge is a flat fee, or the price of each unit in the tier if the charge model is tiered pricing.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeOption__c</fullName>
        <description>The product rate plan charge to be overrided.</description>
        <inlineHelpText>The parent ProductRatePlanChargeOption</inlineHelpText>
        <label>Product Rate Plan Charge Option</label>
        <referenceTo>zqu__ProductRatePlanChargeOption__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Tier Option</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Tier_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__StartingUnit__c</fullName>
        <description>The starting number of a range of units for the tier.</description>
        <label>Starting Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Tier__c</fullName>
        <description>A unique number that identifies the tier that the price applies to.</description>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Rate Plan Charge Tier Option</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Tier Option</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Ending_Unit_Larger_Than_Starting_Unit</fullName>
        <active>true</active>
        <description>Ending Unit should be larger than Starting Unit</description>
        <errorConditionFormula>AND(
   NOT(ISNULL( zqu__EndingUnit__c )),
   NOT(ISNULL( zqu__StartingUnit__c)),
   zqu__EndingUnit__c  &lt;  zqu__StartingUnit__c)</errorConditionFormula>
        <errorDisplayField>zqu__EndingUnit__c</errorDisplayField>
        <errorMessage>Ending Unit should be larger than Starting Unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Ending_Unit_Rule</fullName>
        <active>true</active>
        <description>Starting Unit should not be less than 0</description>
        <errorConditionFormula>AND(
   NOT(ISNULL( zqu__EndingUnit__c )),
   zqu__EndingUnit__c  &lt;  0)</errorConditionFormula>
        <errorDisplayField>zqu__EndingUnit__c</errorDisplayField>
        <errorMessage>Ending Unit should not be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Starting_Unit_Rule</fullName>
        <active>true</active>
        <description>Starting Unit should not be less than 0</description>
        <errorConditionFormula>AND(
   NOT(ISNULL( zqu__StartingUnit__c )),
   zqu__StartingUnit__c  &lt;  0)</errorConditionFormula>
        <errorDisplayField>zqu__StartingUnit__c</errorDisplayField>
        <errorMessage>Starting Unit should not be less than 0</errorMessage>
    </validationRules>
</CustomObject>